# UnstatedNormsAndLLMBias

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: code_checks.yml  test.yaml
tests/prompt_templates/: test_answer_extraction.py  test_stable_predictions.py  test_stable_shots.py
tests/prompt_templates/assets/: semeval_demo_reference.txt  sst5_demo_reference.txt
unstated_norms_llm_bias/finetuning_classification/: extract_template_statistics.ipynb  measure_prompt_results.ipynb  measure_tuning_results_accuracy.ipynb
unstated_norms_llm_bias/finetuning_classification/training/: README.md  custom_dataloaders.py  train_and_evaluate_classifier.py  train_and_evaluate_classifier.py.py  training_utils.py  training_utils.py.py
unstated_norms_llm_bias/finetuning_classification/visualization/: finetuning_group_fairness_plots.ipynb
unstated_norms_llm_bias/gap_and_other_analysis/: gap_spans.py  large_gap_analysis.py  small_gap_analysis.py
unstated_norms_llm_bias/gap_and_other_analysis/stats_files/: amazon_gaps.csv  ns_prompts_gaps.csv  regard_gaps.csv
unstated_norms_llm_bias/prompt_based_classification/: launch_cot_prompt_experiments.sh  launch_prompt_experiments.sh  measure_prompt_results_accuracy.ipynb
unstated_norms_llm_bias/prompt_based_classification/prompt_experiments/: cot_prompting_czarnowska_gemma_7b.py  cot_prompting_czarnowska_llama2_7b.py  cot_prompting_czarnowska_llama3_8b.py  cot_prompting_czarnowska_llama_7b.py  cot_prompting_czarnowska_mistral_7b.py  cot_prompting_czarnowska_qwen2_5_3B.py  utils.py  (+11 more)
(+374 files in other folders)
