[tool.poetry]
name = "unstated_norms_and_llm_bias"
version = "1.0.0"
description = "A repository containing experimental code for the paper Template-Based Probes Are Imperfect Lenses for Counterfactual Bias Evaluation in LLMs"
authors = ["Vector AI Engineering <ai_engineering@vectorinstitute.ai>"]
license = "Apache-2.0"
repository = "https://github.com/VectorInstitute/UnstatedNormsAndLLMBias"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.24"
torch = "2.6.0"
nltk = "^3.8.1"
ipykernel = "^6.25.1"
transformers = "^4.36.2"
pandas = "^1.5.3"
datasets = "^2.16.1"
ipywidgets = "^8.0.5"
plotly = "^5.13.1"
scikit-learn = "^1.2.2"
kaleido = "0.2.1"
pyarrow = "19.0.0"
filelock = "^3.20.0"
virtualenv = "^20.36.1"

[tool.poetry.group.codestyle.dependencies]
black = "^24.3.0"
flake8 = "^5.0.4"
mypy = "^1.7.0"
pyproject-flake8 = "5.0.4"
isort = "5.11.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.1"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
nbqa = { version = "^1.7.0", extras = ["toolchain"] }
pip-audit = "^2.7.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"
skip_gitignore = true
